// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-headline> Component <span>-based Headlines do not overlap with neighboring <p> tags 1`] = `
<span class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  This is a Headline
</span>
`;

exports[`<bolt-headline> Component <span>-based Headlines do not overlap with neighboring <p> tags 2`] = `
<span
  class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge"
  style=""
>
  This is a Headline
</span>
`;

exports[`<bolt-headline> Component <span>-based Headlines horizontally align properly. 1`] = `
<span class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--center c-bolt-headline--xlarge">
  This is a Headline
</span>
`;

exports[`<bolt-headline> Component <span>-based Headlines horizontally align properly. 2`] = `
<span
  class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--center c-bolt-headline--xlarge"
  style=""
>
  This is a Headline
</span>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: large, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: large, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: medium, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--medium">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: medium, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--medium">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: small, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--small c-bolt-headline--uppercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: small, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--small c-bolt-headline--uppercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xlarge, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xlarge, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xsmall, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xsmall, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxlarge, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxlarge, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxsmall, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxsmall, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxxlarge, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxxlarge, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: large, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: large, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--large">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: large, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--large">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: medium, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--medium">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: medium, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--medium">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: medium, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--medium">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: small, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--small c-bolt-headline--uppercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: small, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--small c-bolt-headline--uppercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: small, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--small c-bolt-headline--uppercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xlarge, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xlarge, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xlarge, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xsmall, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xsmall, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--xsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xsmall, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--xsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxlarge, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxlarge, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--xxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxlarge, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--xxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxsmall, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxsmall, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--xxsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxsmall, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--xxsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxxlarge, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxxlarge, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--xxxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxxlarge, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--xxxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component basic usage eyebrow 1`] = `
<p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
  this is an eyebrow
</p>
`;

exports[`<bolt-headline> Component basic usage headline 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  this is a headline
</h2>
`;

exports[`<bolt-headline> Component basic usage headline with attributes 1`] = `
<h2 foo
    bar="baz"
    class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge"
>
  this is a headline
</h2>
`;

exports[`<bolt-headline> Component basic usage lead 1`] = `
<p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--large">
  this is a lead
</p>
`;

exports[`<bolt-headline> Component basic usage subheadline 1`] = `
<p class="c-bolt-subheadline c-bolt-subheadline--regular c-bolt-subheadline--xlarge">
  this is an subheadline
</p>
`;

exports[`<bolt-headline> Component basic usage text 1`] = `
<p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
  this is text
</p>
`;

exports[`<bolt-headline> Component headline with associated link 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge c-bolt-headline--link">
  <a href="www.testurl.com"
     class="e-bolt-text-link e-bolt-text-link--reversed-underline"
  >
    this is a headline
    <span class="e-bolt-text-link__icon-after"
          aria-hidden="true"
    >
      <svg class="e-bolt-icon"
           xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 32 32"
           aria-hidden="true"
      >
        <path fill="#151619"
              fill-rule="evenodd"
              d="M12.4 5.4c-.6-.6-1.6-.6-2.2 0s-.6 1.6 0 2.3l8.4 8.3-8.3 8.3c-.6.6-.6 1.6 0 2.2.3.3.7.5 1 .5.4 0 .8-.2 1.1-.5l9.4-9.4c.6-.6.6-1.6 0-2.2z"
              clip-rule="evenodd"
        >
        </path>
      </svg>
    </span>
  </a>
</h2>
`;

exports[`<bolt-headline> Component headline with icon 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  <span class="c-bolt-headline__text">
    this is a headline
    <span class="c-bolt-headline__icon c-bolt-headline__icon--position-after">
      <svg class="e-bolt-icon"
           xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 32 32"
           aria-hidden="true"
      >
        <path fill="#151619"
              fill-rule="evenodd"
              d="M29 5L10.7 23.3 3 15.6c-.7-.7-1.8-.7-2.5 0s-.7 1.8 0 2.5L9.4 27c.3.3.8.5 1.3.5s.9-.2 1.3-.5L31.5 7.5c.7-.7.7-1.8 0-2.5s-1.8-.7-2.5 0z"
              clip-rule="evenodd"
        >
        </path>
      </svg>
    </span>
  </span>
</h2>
`;

exports[`<bolt-headline> Component tag display: cite 1`] = `
<cite class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</cite>
`;

exports[`<bolt-headline> Component tag display: div 1`] = `
<div class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</div>
`;

exports[`<bolt-headline> Component tag display: h1 1`] = `
<h1 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h1>
`;

exports[`<bolt-headline> Component tag display: h2 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component tag display: h3 1`] = `
<h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h3>
`;

exports[`<bolt-headline> Component tag display: h4 1`] = `
<h4 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h4>
`;

exports[`<bolt-headline> Component tag display: h5 1`] = `
<h5 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h5>
`;

exports[`<bolt-headline> Component tag display: h6 1`] = `
<h6 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h6>
`;

exports[`<bolt-headline> Component tag display: p 1`] = `
<p class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</p>
`;

exports[`<bolt-headline> Component tag display: span 1`] = `
<span class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</span>
`;

exports[`<bolt-headline> Component text alignment: center 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--center c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component text alignment: left 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--left c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component text alignment: right 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--right c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component text casing: capitalize 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge c-bolt-headline--capitalize">
  Some text
</h2>
`;

exports[`<bolt-headline> Component text casing: lowercase 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge c-bolt-headline--lowercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component text casing: uppercase 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge c-bolt-headline--uppercase">
  Some text
</h2>
`;
